--- a/HBefunge.cabal
+++ b/HBefunge.cabal
@@ -19,6 +19,6 @@ executable HBefunge
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.8 && <4.9, vector >=0.11 && <0.12
+  build-depends:       base >=4.8 && <4.9, vector >=0.11 && <0.12, random >= 1.1
   -- hs-source-dirs:      
   default-language:    Haskell2010
